--- a/style.css
+++ b/style.css
@@ -1,3 +1,43 @@
-body{
+body {
     font-family: 'Roboto Condensed', sans-serif;
+    background-color: #D0D3D4;
+}
+
+header {
+    background-image: url(https://cdn.pixabay.com/photo/2017/04/21/09/38/street-2248101_1280.jpg);
+    width: 100%;
+    height: 100vh;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 0;
+}
+
+#banner {
+    color: #fff;
+    text-align: center;
+}
+
+.banner h2 {
+    font-size: 100px;
+    font-weight: 600;
+}
+
+.banner p {
+    font-size: 25px;
+    font-weight: 400;
+}
+
+a {
+    text-decoration: none;
+    background-color: #FDEDEC;
+    font-size: 16px;
+    font-weight: 500;
+    padding: 15px;
+    border-radius: 10px;
+    margin-top: 50px;
+
 }
