--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
     font-family: 'Roboto Condensed', sans-serif;
     background-color: #D0D3D4;
+    margin: 0;
 }
 
 header {
@@ -13,7 +14,7 @@ header {
     display: flex;
     align-items: center;
     justify-content: center;
-    margin: 0;
+   
 }
 
 #banner {
@@ -31,13 +32,53 @@ header {
     font-weight: 400;
 }
 
-a {
+.btn{
     text-decoration: none;
-    background-color: #FDEDEC;
-    font-size: 16px;
+    display: inline-block;
+    font-size: 18px;
     font-weight: 500;
-    padding: 15px;
-    border-radius: 10px;
-    margin-top: 50px;
+    background: #E8DAEF;
+    padding: 10px ;
+    border-radius: 5px;
+    margin: 30px 0 10px;
+}
 
+section{
+    margin-top: 80px;
+}
+
+.money{
+    display: flex;
+    justify-content: space-evenly;
+    padding: 10px;
+}
+
+.money-1{
+    background: #F2F3F4 ;
+    border: 3px solid rgba(255, 255, 255, 0.3);
+    border-radius: 5px;
+    box-shadow: 10px, 10px, 30px rgba(39, 38, 38, 0.1);
+    padding: 20px;
+}
+
+#money-2{
+    background: #F2F3F4 ;
+    border: 3px solid #F5B7B1 ;
+    border-radius: 5px;
+    box-shadow: 10px, 10px, 30px rgba(39, 38, 38, 0.1);
+    padding: 20px;
+}
+
+input{
+  width: 35%;
+  height: 8vh;
+  text-align: center;
+  justify-content: center;
+  margin-top: 10px;
+  border: none;
+  background-color: none;
+}
+
+#donate {
+    margin-left: 50%;
 }
