--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
 }
 
 header {
-    background-image: url(https://cdn.pixabay.com/photo/2017/04/21/09/38/street-2248101_1280.jpg);
+    background-image: url(images/banner.jpg);
     width: 100%;
     height: 100vh;
     background-repeat: no-repeat;
@@ -81,4 +81,33 @@ input{
 
 #donate {
     margin-left: 50%;
+}
+
+#donate-plan{
+    background: #D6EAF8;
+    border: 0;
+    border-radius: 10px;
+    box-shadow: 0px 4px 3px #34495E;
+    align-content: center;
+    margin-right: 10px;
+    padding: 20px;
+}
+#donate-plan1{
+    background: #E8DAEF;
+    border: 0;
+    border-radius: 10px;
+    box-shadow: 0px 4px 3px #34495E;
+    align-content: center;
+    margin-right: 10px;
+    padding: 20px;
+}
+
+#donate-plan2{
+    background: #FDEDEC;
+    border: 0;
+    border-radius: 10px;
+    box-shadow: 0px 4px 3px #34495E;
+    align-content: center;
+    margin-right: 10px;
+    padding: 20px;
 }
