font size customize

--- a/style.css
+++ b/style.css
@@ -18,10 +18,13 @@ header {
 }
 
 h2 {
+    font-size: 50px;
+    font-weight: 700;
     text-align: center;
 }
 
 p {
+    
     text-align: center;
 }
 
